<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/input">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:id="@+id/titleSection"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/backgroundPrimary"
            tools:layout_editor_absoluteX="120dp">

        <TextView
                style="@style/ActivityTitleStyle"
                android:text="@string/input_activity_title_add"
                android:contentDescription="@string/input_activity_title_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inputTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="16dp" />

        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:progressTint="@color/backgroundSecondary"
                android:backgroundTint="#FF0000"
                android:max="1"
                android:progress="0"
                android:min="0"
                android:progressTintMode="src_in"
                android:progressBackgroundTint="#FFFFFF"
                android:progressBackgroundTintMode="add"
                app:layout_constraintEnd_toEndOf="@+id/inputTitle"
                app:layout_constraintStart_toStartOf="@+id/inputTitle"
                app:layout_constraintTop_toBottomOf="@+id/inputTitle"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" />


        <com.google.android.material.chip.Chip
                style="@style/NormalChipStyle"
                android:text="@string/first_progress_title"
                android:contentDescription="@string/first_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personalProgressTitle"
                app:layout_constraintEnd_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar" />

        <com.google.android.material.chip.Chip
                style="@style/NormalChipStyle"
                android:text="@string/second_progress_title"
                android:contentDescription="@string/second_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactProgressTitle"
                app:layout_constraintTop_toTopOf="@+id/progressBar"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintStart_toEndOf="@+id/progressBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/titleSection"
            android:id="@+id/inputFragmentLayout"
            app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>